# oasis-suite

./: .gitignore  Cargo.toml
.cursor/rules/: ARCHITECTURE.md  IDEA.md  MAYBE.md  MINDSET.md  MISTAKES.md  RULE.mdc  WORKFLOW.md
crates/oasis_comp/: Cargo.toml
crates/oasis_comp/src/: dsp.rs  lib.rs  params.rs  plugin.rs  presets.rs  ui.rs
crates/oasis_core/: Cargo.toml
crates/oasis_core/src/: constants.rs  lib.rs
crates/oasis_core/src/dsp/: delay.rs  dynamics.rs  filter.rs  mid_side.rs  mod.rs  waveshaper.rs
crates/oasis_core/src/params/: formatting.rs  mod.rs
crates/oasis_core/src/util/: denormal.rs  math.rs  mod.rs  sample_rate.rs
crates/oasis_deess/: Cargo.toml
crates/oasis_deess/src/: dsp.rs  lib.rs  params.rs  plugin.rs  presets.rs  ui.rs
crates/oasis_delay/: Cargo.toml
crates/oasis_delay/src/: dsp.rs  lib.rs  params.rs  plugin.rs  presets.rs  ui.rs
crates/oasis_drive/: Cargo.toml
crates/oasis_drive/src/: dsp.rs  lib.rs  params.rs  plugin.rs  presets.rs  ui.rs
crates/oasis_eq/: Cargo.toml
crates/oasis_eq/src/: dsp.rs  lib.rs  params.rs  plugin.rs  presets.rs  ui.rs
crates/oasis_limit/: Cargo.toml
crates/oasis_limit/src/: dsp.rs  lib.rs  params.rs  plugin.rs  presets.rs  ui.rs
crates/oasis_pump/: Cargo.toml
crates/oasis_pump/src/: dsp.rs  lib.rs  params.rs  plugin.rs  presets.rs  ui.rs
crates/oasis_punch/: Cargo.toml
crates/oasis_punch/src/: dsp.rs  lib.rs  params.rs  plugin.rs  presets.rs  ui.rs
crates/oasis_shift/: Cargo.toml
crates/oasis_shift/src/: dsp.rs  lib.rs  params.rs  ui.rs  (+2 more)
crates/oasis_synth/: Cargo.toml
crates/oasis_ui/: Cargo.toml
crates/oasis_verb/: Cargo.toml
crates/oasis_wide/: Cargo.toml
xtask/src/: main.rs
(+24 files in other folders)
