[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "1.0.0"
authors = ["Oasis Suite"]
edition = "2021"
license = "Proprietary"

[workspace.dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

oasis_core = { path = "crates/oasis_core" }
oasis_ui = { path = "crates/oasis_ui" }

atomic_float = "1"
crossbeam-utils = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
