[package]
name = "oasis_comp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_vizia = { workspace = true }
oasis_core = { workspace = true }
oasis_ui = { workspace = true }

[features]
default = []
debug-dsp = []
debug-metrics = []
debug-logging = []
debug-all = ["debug-dsp", "debug-metrics", "debug-logging"]
